--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,83 @@
-# Local .terraform directories
-**/.terraform/*
+# CDK asset staging directory
+.cdk.staging
+cdk.out/
 
-# .tfstate files
-*.tfstate
-*.tfstate.*
+# Python virtual environment
+.venv/
+venv/
 
-# Crash log files
-crash.log
-crash.*.log
+# Python cache files
+__pycache__/
+*.py[cod]
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
+# Python distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+# pyenv
+.python-version
 
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# Environment files
+.env
+.env.*
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# CDK context
+cdk.context.json
+
+# Node modules (if you're using any Node.js components)
+node_modules/
+
+# AWS SAM CLI
+.aws-sam/
+
+# Ignore CloudFormation template output
+*.template.json
